--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 	<div id="page">
 
 
-	<header id="fh5co-header" class="fh5co-cover"  role="banner" style="background-image:url(images/propuestaPlaya.jpg);" data-stellar-background-ratio="0.5">
+	<header id="fh5co-header" class="fh5co-cover"  role="banner" style="background-image:url(images/PropuestaPlaya.jpg);" data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
