--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 				<div class="col-md-6 col-md-push-6 animate-box">
 					<h3>Ubicación</h3>
 					<div class="image-container">
-                    <img src="images/ubicacion3.jpg" alt="Mapa de Ubicación" style="width: 100%; height: auto; border-radius: 10px;">
+                    <img src="images/Ubicacion3.jpg" alt="Mapa de Ubicación" style="width: 100%; height: auto; border-radius: 10px;">
                 </div>
 					
 				</div>
