--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
 				<div class="col-md-6">
 					<div class="feature-left animate-box" data-animate-effect="fadeInLeft">
 						 <span class="icon" style="display: flex; justify-content: center; align-items: center; height: 100%;">
-                <img src="images/Vestido12.svg" alt="Icono de calendario" style="width: 50px; height: 50px;">
+                <img src="images/vestido12.svg" alt="Icono de calendario" style="width: 50px; height: 50px;">
             </span>						<div class="feature-copy">
 							<h3>MUJERES</h3>
 							<p> Vestido largo</p>
@@ -329,7 +329,7 @@
 
 					<div class="feature-left animate-box" data-animate-effect="fadeInLeft">
 						 <span class="icon" style="display: flex; justify-content: center; align-items: center; height: 100%;">
-                <img src="images/RECOMENDACIONES5.svg" alt="Icono de calendario" style="width: 50px; height: 50px;">
+                <img src="images/recomendaciones5.svg" alt="Icono de calendario" style="width: 50px; height: 50px;">
             </span>	
 						<div class="feature-copy">
 							<h3>RECOMENDACIONES</h3>
@@ -367,7 +367,7 @@
 								<div class="item">
 									<div class="testimony-slide active text-center">
 										<figure>
-											<img src="images/Noniños2.jpg" alt="user">
+											<img src="images/NoNiños2.jpg" alt="user">
 										</figure>
 										<div class="row animate-box">
 					<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
@@ -408,7 +408,7 @@
 
 	
 
-<div id="fh5co-started" class="fh5co-bg" style="background-image:url(images/confirmacion.jpg);">
+<div id="fh5co-started" class="fh5co-bg" style="background-image:url(images/Confirmacion.jpg);">
     <div class="overlay"></div>
     <div class="container">
         <div class="row animate-box">
@@ -443,7 +443,7 @@
 				<div class="col-md-12">
 					<ul id="fh5co-gallery-list">
 						
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/inicio2.jpg); "> 
+						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/Inicio2.jpg); "> 
 						<a href="images/inicio2.jpg">
 							<div class="case-studies-summary">
 								<span>Enero 22, 2016 </span>
