--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-					<h2>Mesa de regalos</h2>
+					<h2>Mesa de Regalos</h2>
 					
 					<p>Su asistencia a nuestra boda será regalo suficiente. Pero si desean darnos un regalo, les dejamos los datos de nuestra cuenta bancaria.</p>
 					<h3>Cuenta clave BBVA: 012 180 029 043 603 382</h3>
