--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 	<div id="page">
 
 
-	<header id="fh5co-header" class="fh5co-cover"  role="banner" style="background-image:url(images/PropuestaPlaya.jpg);" data-stellar-background-ratio="0.5">
+	<header id="fh5co-event" class="fh5co-cover" style="background-image:url(images/PropuestaPlaya.jpg);" data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
@@ -81,15 +81,7 @@
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
 							<h7>Roxana &amp; Vicente</h7>
 							<h2>¡Nos casamos!</h2>
-							<!--
-								Cuenta regresiva
-
-
-							<div class="simply-countdown simply-countdown-one"></div>
-
-							Botón de save the date
-							<p><a href="#" class="btn btn-default btn-sm">Save the date</a></p>
-							-->
+							
 						</div>
 					</div>
 				</div>
