--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 		
 	<div class="fh5co-loader"></div>
 	
-	<div id="page">
+	<div >
 
 
 	<header id="fh5co-event" class="fh5co-cover" style="background-image:url(images/PropuestaPlaya.jpg);" data-stellar-background-ratio="0.5">
