--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 	<div >
 
 
-	<header id="fh5co-event" class="fh5co-cover" style="background-image:url(images/PropuestaPlaya.jpg);" data-stellar-background-ratio="0.5">
+	<header id="fh5co-event" class="fh5co-cover" style="background-image:url(images/PropuestaPlaya.jpg);" >
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
