--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 			<div class="row">
 				<div class="display-t">
 					<div class="display-tc">
-						
+							<div class="simply-countdown simply-countdown-one"></div>
 						<!--<div class="col-md-3 col-sm-6 animate-box">
 
 							<div class="feature-center">-->
