--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<title>Rox & Vince</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Rox " />
-	<meta name="keywords" content="Conc cariño" />
+	<meta name="keywords" content="Con cariño" />
 	<meta name="author" content="R&V" />
 
 
