--- a/index.html
+++ b/index.html
@@ -265,7 +265,8 @@
 					<h2>Mesa de Regalos</h2>
 					
 					<p>Su asistencia a nuestra boda será regalo suficiente. Pero si desean darnos un regalo, les dejamos los datos de nuestra cuenta bancaria.</p>
-					<h3>Cuenta clave BBVA: 012 180 029 043 603 382</h3>
+					<h3 style="font-weight: bold; color: black;">Cuenta clave BBVA: 012 180 029 043 603 382</h3>
+
 					<p>Roxana Estrella Luna Chavez</p>
 				</div>
 			</div>
