--- a/index.html
+++ b/index.html
@@ -548,8 +548,8 @@
 								<div class="timeline-body">
 									<p>RESERVA: "ROXANA Y VICENTE" </p>
 									<p>Contactar a  Central de Reservaciones:</p>
-									<p>Desde la ciudad de México: 5326-6900. </p>
-									<p>Del interior de la República: 01-800-504-5000</p>
+									<p>Desde la ciudad de México: 53266900. </p>
+									<p>Del interior de la República: 018005045000</p>
 									<a href="https://reservations.fiestainn.com/97957?adults=2&children=0&currency=MXN&datein=11/26/2024&domain=www.google.com&gad_source=1&gclid=Cj0KCQiAi_G5BhDXARIsAN5SX7rQOGrQfNvWultCLHujvx0Arlvwp76x5NkdQrnd2L3gJRU41cKmgpgaAi_3EALw_wcB&gdp=hotelfinder&hotelID=97957&languageid=1&nights=1&rateplanID=7834592&roomtypeID=397905&subchan=GOOGLE_MX_desktop_CPC&utm_campaign=ds_21266287803&utm_content=HPA_97957_localuniversal_1_MX_desktop_2024-11-26_default_21266287803__standard&utm_medium=meta&utm_source=googleha#/accommodation/room" target="_blank" class="btn-maps2">Sitio Web</a>
 									
 								</div>
@@ -567,8 +567,8 @@
 									
 
 									<P> Contactar a  Central de Reservaciones:</p>
-										<p>Desde la ciudad de México: 55-5326-6900.</p>
-										<p>Del interior de la República: 800-504-5000</p>
+										<p>Desde la ciudad de México: 5553266900.</p>
+										<p>Del interior de la República: 8005045000</p>
 										<a href="https://www.fiestamericanatravelty.com/one-hoteles/hoteles/one-cuernavaca?utm_source=google&utm_medium=cpc&utm_campaign=amadeus_brand&gad_source=1&gclid=Cj0KCQiAi_G5BhDXARIsAN5SX7o47nNf6Xr0KrflIH0cnuyOOKSjx37Q8nKhV-qrriFmxvHfbgnt9BIaAjMzEALw_wcB&gclsrc=aw.ds" target="_blank" class="btn-maps2">Sitio Web</a>
 
 								</div>
