--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">FIESTA IN </h3>
-									<span class="date">CÓDIGO:G1SMB </span>
+									<span class="date">CÓDIGO:G1SM0B </span>
 								</div>
 								<div class="timeline-body">
 									<p>RESERVA: "ROXANA Y VICENTE" </p>
